Trying to remove all the providers